test/Fail/FunSort-SSet-X-PropOmega.err
FunSort-SSet-X-PropOmega.agda:6.13-18: error: [UnequalTypes]
The types
  Propω
and
  funSort SSet _4
are not equal
when checking that the expression A → B has type Propω
